fix: remove tap highlight on mobile Chrome and Safari

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,6 +34,11 @@
   }
 }
 
+button,
+a {
+  -webkit-tap-highlight-color: transparent;
+}
+
 a {
   color: inherit;
   text-decoration: none;
